credits-en argazkia falta da

--- a/credits.html
+++ b/credits.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
-	<title>Quizzes</title>
+	<title>Credits</title>
     <link rel='stylesheet' type='text/css' href='stylesPWS/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
@@ -18,19 +18,14 @@
 	<header class='main' id='h1'>
       <span class="right"><a href="/login">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
-	<h2>Quiz: crazy questions</h2>
+	<h2>Credits</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
-		<span><a href='credits.html'>Credits</a></span>
 	</nav>
     <section class="main" id="s1">
-    
-	
-	<div>
-	Quizzes and credits will be displayed in this spot in future laboratories ...
-	</div>
+	<h3>Ruben Venegas eta Xabier Garmendia</h3>
+	Software Ingenieritza
     </section>
 	<footer class='main' id='f1'>
 		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
