--- a/credits.html
+++ b/credits.html
@@ -25,7 +25,11 @@
 	</nav>
     <section class="main" id="s1">
 	<h3>Ruben Venegas eta Xabier Garmendia</h3>
-	Software Ingenieritza
+	<h4>Software Ingenieritza<h4>
+	<br>
+	<img src="irudiak/Ruben.png">
+	<img src="irudiak/Xabi.png">
+	
     </section>
 	<footer class='main' id='f1'>
 		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
