--- a/addQuestion.html
+++ b/addQuestion.html
@@ -12,25 +12,48 @@
 		   type='text/css' 
 		   media='only screen and (max-width: 480px)'
 		   href='stylesPWS/smartphone.css' />
+	<style>
+	.ezk{
+		text-align:left;
+	}
+	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>  
+	<script src=".\javascript\balioztatu.js"></script>	
   </head>
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="/login">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
 	<h2>Quiz: crazy questions</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
-		<span><a href='credits.html'>Credits</a></span>
+		<span><a href='layout.html'>Hasiera</a></span>
 	</nav>
     <section class="main" id="s1">
     
-	
+	<form id="galderenF" name="galderenF" action="proba.php">
 	<div>
-	Quizzes and credits will be displayed in this spot in future laboratories ...
+	<p class="ezk">Galderaren egilearen eposta (*)
+		<input type=text id="email" name="Email" value="Hizkiak+3 digitu+ “@ikasle.ehu.” + “eus”/“es”" size=40/></p> <br>
+	<p class="ezk">Galderaren testua (*)
+		<input type=text id="galdera" name="Galdera"/></p><br>
+	<p class="ezk">Erantzun zuzena (*)
+		<input type=text id="erantzuna" name="Erantzuna"/></p><br>
+	<p class="ezk">Erantzun okerra1 (*)
+		<input type=text id="oker1" name="Okerra1"/></p><br>
+	<p class="ezk">Erantzun okerra2 (*)
+		<input type=text id="oker2" name="Okerra2"/></p><br>
+	<p class="ezk">Erantzun okerra3 (*)
+		<input type=text id="oker3" name="Okerra3"/></p><br>
+	<p class="ezk">Galderaren zailtasuna (1 eta 5 artekoa) (*)
+		<input type=text id="zailtasuna" name="Zailtasuna"/></p><br>
+	<p class="ezk">Galderaren gai-arloa(*)
+		<input type=text id="gaia" name="Gaia"/></p><br>
+	<p class="ezk">
+	<button type="submit" id="balioztatu">Balioztatu</button>
+	<input type="reset" value="Desegin"></p>
 	</div>
+	</form>
     </section>
 	<footer class='main' id='f1'>
 		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
