--- a/credits.html
+++ b/credits.html
@@ -16,16 +16,17 @@
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="/login">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
 	<h2>Credits</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
+		<span><a href='layout.html'>Hasiera</a></span>
 	</nav>
     <section class="main" id="s1">
 	<h3>Ruben Venegas eta Xabier Garmendia</h3>
-	Software Ingenieritza
+	Software Ingenieritza<br>
+	<img src="irudiak\Ruben.png">
+	<img src="irudiak\Xabi.png">
     </section>
 	<footer class='main' id='f1'>
 		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
