--- a/layout.html
+++ b/layout.html
@@ -21,9 +21,10 @@
 	<h2>Quiz: crazy questions</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
-		<span><a href='credits.html'>Credits</a></span>
+		<span><a href='layout.html'>Hasiera</a></span>
+		<span><a href='quizzes.html'>Quizzes</a></span>
+		<span><a href='addQuestion.html'>Galdera Gehitu</a></span>
+		<span><a href='credits.html'>Kredituak</a></span>
 	</nav>
     <section class="main" id="s1">
     
