--- a/credits.html
+++ b/credits.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
-	<title>Credits</title>
+	<title>Kredituak</title>
     <link rel='stylesheet' type='text/css' href='stylesPWS/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
@@ -16,12 +16,11 @@
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="/login">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
-	<h2>Credits</h2>
+	<h2>Kredituak</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
+		<span><a href='layout.html'><img src="irudiak\flecha.png" width="70" href='layout.html'></a></span>
 	</nav>
     <section class="main" id="s1">
 	<h3>Ruben Venegas eta Xabier Garmendia</h3>
@@ -32,7 +31,7 @@
 	
     </section>
 	<footer class='main' id='f1'>
-		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
+		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">Zer da galdetegi bat?</a></p>
 		<a href='https://github.com'>Link GITHUB</a>
 	</footer>
 </div>
