--- a/layout.html
+++ b/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
-	<title>Quizzes</title>
+	<title>Galdetegia</title>
     <link rel='stylesheet' type='text/css' href='stylesPWS/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
@@ -18,12 +18,14 @@
 	<header class='main' id='h1'>
       <span class="right"><a href="/login">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
-	<h2>Quiz: crazy questions</h2>
+	<h2>Galdetegia: galdera eroak</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
-		<span><a href='credits.html'>Credits</a></span>
+		<span><a href='layout.html'>Hasiera</a></span>
+		<span><a href='/quizzes'>Galdetegiak</a></span>
+		<span><a href='credits.html'>Kredituak</a></span>
+		<span><a href='addQuestion.html'>Galdera Gehitu</a></span>
+		<span><a href='addQuestionHTML5.html'>Galdera Gehitu HTML5</a></span>
 	</nav>
     <section class="main" id="s1">
     
@@ -33,7 +35,7 @@
 	</div>
     </section>
 	<footer class='main' id='f1'>
-		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
+		<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">Zer da galdetegi bat?</a></p>
 		<a href='https://github.com'>Link GITHUB</a>
 	</footer>
 </div>
