hautazkoa falta da

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -57,7 +57,7 @@
     
 	
 	<div>
-	<form id="galderenF" name="galderenF" action="proba.php" >			
+	<form id="galderenF" name="galderenF" action="./php/addQuestion.php" enctype="multipart/form-data" method="post" >			
 	
 		Galderaren egilearen eposta (*)  <input class="inputak" id="email" name="email" size="43" placeholder="Hizkiak+3 digitu+“@ikasle.ehu.”+“eus”/“es”"></input>
 		<br><br>
