--- a/credits.html
+++ b/credits.html
@@ -24,7 +24,7 @@
 	</nav>
     <section class="main" id="s1">
 	<h3>Ruben Venegas eta Xabier Garmendia</h3>
-	<h4>Software Ingenieritza<h4>
+	<h4>Software Ingenieritza</h4>
 	<br>
 	<img src="irudiak/Ruben.png">
 	<img src="irudiak/Xabi.png">
