--- a/credits.html
+++ b/credits.html
@@ -26,7 +26,7 @@
 	<h3>Ruben Venegas eta Xabier Garmendia</h3>
 	<h4>Software Ingenieritza</h4>
 	<br>
-	<img src="irudiak/Ruben.png">
+	<img id="xabi" src="irudiak/Ruben.png">
 	<img src="irudiak/Xabi.png">
 	
     </section>
