--- a/layout.html
+++ b/layout.html
@@ -22,6 +22,7 @@
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Hasiera</a></span>
+		<span><a href='./php/signUp.php'>Erregistratu</a></span>
 		<span><a href='/quizzes'>Galdetegiak</a></span>
 		<span><a href='credits.html'>Kredituak</a></span>
 		<span><a href='addQuestion.html'>Galdera Gehitu</a></span>
