--- a/layout.html
+++ b/layout.html
@@ -16,13 +16,13 @@
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="/login">LogIn</a> </span>
+      <span class="right"><a href="/login">LogIn</a> </span>&ensp;
+	  <span class="right"><a href='./php/signUp.php'>Erregistratu</a></span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
 	<h2>Galdetegia: galdera eroak</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Hasiera</a></span>
-		<span><a href='./php/signUp.php'>Erregistratu</a></span>
 		<span><a href='/quizzes'>Galdetegiak</a></span>
 		<span><a href='credits.html'>Kredituak</a></span>
 		<span><a href='addQuestion.html'>Galdera Gehitu</a></span>
