--- a/layout.html
+++ b/layout.html
@@ -24,6 +24,7 @@
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Hasiera</a></span>
 		<span><a href='credits.html'>Kredituak</a></span>
+		<span><a href='./php/showXMLQuestions.php'>XML galderak ikusi</a></span>
 	
 	</nav>
     <section class="main" id="s1">
